@@ -1,1 +1,1 @@
-char *version_string = "gcc-3.0.0 970802 experimental";
+char *version_string = "egcs-1.0.0 970814 (gcc2-970802 experimental)";
