@@ -1,3 +1,10 @@
+Fri Aug 15 12:49:56 1997  Jeffrey A Law  (law@cygnus.com)
+
+	* version.c: Change the version string to look like:
+	egcs-1.0.0 970814 (gcc2-970802 experimental).
+
+	* gcc.c: Take out experimental snapshot warning message.
+
 Fri Aug 15 13:43:39 1997  Michael Meissner  <meissner@cygnus.com>
 
 	* haifa-sched.c (debug_dependencies): Use GET_NOTE_INSN_NAME to
